blue-green-ns/method2/blue-ingress-svc.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-ns
---
kind: Service
apiVersion: v1
metadata:
  name: blue-ex-svc-nginx
  namespace: ingress-ns
spec:
  type: ExternalName
  externalName: flask-svc-blue.flask-ns-blue.svc.cluster.local
  ports:
  - port: 80
