blue-green-ns/method2/ingress.yml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ingress-ns
  labels:
    app: flask-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
    - host: main.akhilmovva.live
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: blue-ex-svc-nginx
              port:
                number: 80
    # - host: new.akhilmovva.live
    #   http:
    #     paths:
    #     - pathType: Prefix
    #       path: "/"
    #       backend:
    #         service:
    #           name: green-ex-svc-nginx
    #           port:
    #             number: 80
